[package]
name = "rvjit-aa64"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
dynasmrt = "1.0"
bitflags = "1.2"
thiserror = "1.0"
anyhow = "1.0"
bit_field = "0.10"
byteorder = "1.3"
